Avoid webcam overflow the screen with multiples webcams

--- a/bigbluebutton-html5/imports/ui/components/media/styles.scss
+++ b/bigbluebutton-html5/imports/ui/components/media/styles.scss
@@ -40,9 +40,13 @@
   position: relative;
 }
 
-.overlayAbsolute{
+.overlayAbsoluteSingle{
   position: absolute;
   height: calc(var(--video-width) / var(--video-ratio));
+}
+
+.overlayAbsoluteMult{
+  position: absolute;
 }
 
 .overlayToTop {
